welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: Missing closing brace `}' assumed here
def hunt(c:Color) {
^SlugSnail:14: error: expected class or object definition
def isFacingTrail():Boolean = {
^